# django-user-starter

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  release.sh  requirements.txt  setup.cfg  starter-en.sh  starter-zh.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump-version.yml  deploy.yml  publish.yml  quality.yml  release.yml
django_user_starter/: __init__.py  _version.py  cli.py  main.py  starter-en.sh  starter-zh.sh
tests/: test_cli.py  test_generator_methods.py  test_version.py
