[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm[toml]>=6.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "django_user_starter"
version = "1.0.0"
description = "A Django starter script with both Chinese and English versions, auto versioning via setuptools_scm."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "starter", "shell"]
authors = [
  { name = "yaninsanity", email = "admin@jl-blog.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "Django>=3.2",
  "django-avatar",
  "pillow",
  "django-jazzmin"
]
requires-python = ">=3.7"



[project.scripts]
django-starter-zh = "django_user_starter.cli:main_zh"
django-starter-en = "django_user_starter.cli:main_en"



[tool.setuptools]

[tool.setuptools.packages.find]
exclude = [
  "venv*",
  "*.egg-info",
  "build",
  "dist",
]

[tool.semantic_release]
version_source = "tag"
version_pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
upload_to_pypi = true
upload_to_github = true
branch = "main"
force = true
