[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "django_user_starter"
dynamic = ["version"]
description = "A Django starter script with both Chinese and English versions, auto versioning via setuptools_scm."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "starter", "shell"]
authors = [
  { name = "yaninsanity", email = "admin@jl-blog.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: Django",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "Django>=3.2",
  "django-avatar",
  "pillow",
  "django-jazzmin"
]
requires-python = ">=3.7"

[project.scripts]
django-starter-zh = "django_user_starter.cli:main_zh"
django-starter-en = "django_user_starter.cli:main_en"

[tool.setuptools]

[tool.semantic_release]
version_source = "tag"
version_pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
upload_to_pypi = true
upload_to_github = true
branch = "main"
force = true
build_command = "python -m pip install --upgrade setuptools build wheel && python -m build --no-isolation"
version_file = "django_user_starter/_version.py"
version_file_regex = '(__version__\\s*=\\s*["\'])([^"\']*)(["\'])'